--- a/src/app/pages/documents/document-acquisition/document-acquisition.component.html
+++ b/src/app/pages/documents/document-acquisition/document-acquisition.component.html
@@ -50,7 +50,7 @@
                     <td>{{ document.name }}</td>
                     <td>{{ document.type }}</td>
                     <td>{{ document.size }}</td>
-                    <td></td>
+                    <td>{{ document.typeDoc }}</td>
                     <td></td>
                     <td class="d-flex align-items-center justify-content-around">
                         <span class=" fa fa-list text-primary"></span>
