--- a/src/app/pages/documents/document-list/document-list.component.html
+++ b/src/app/pages/documents/document-list/document-list.component.html
@@ -15,7 +15,7 @@
       />
       <br />
       <span class="fileName" style="font-size: smaller">
-        {{ dossier.name }}
+        {{ typeDoc.name }}
       </span>
       <!-- <span class="fileSize" style="font-size: smaller;"> {{ dossier.size }} </span> -->
     </div>
