--- a/src/app/pages/documents/document-dossiers/document-dossiers.component.html
+++ b/src/app/pages/documents/document-dossiers/document-dossiers.component.html
@@ -2,22 +2,54 @@
   <div class="col align-items-center justify-content-center">
     <div class="row justify-content-around">
       <div class="col align-self-center">
-        <div class="card shadow">
+        <div class="card shadow m-0 p--2">
           <div class="card-content">
             <div class="card-header border-0 d-flex align-items-center justify-content-between ">
               <h3 class="card-title mb-0">Vos Dossiers</h3>
-              <i class="fas fa-plus-square fa-2x shadow-lg rounded text-success"></i>
+              <!-- Button trigger modal -->
+              <span data-bs-toggle="modal" data-bs-target="#createFolder">
+                <i class="fas fa-plus-square fa-2x shadow-lg rounded text-success" ></i>
+              </span>
+              
             </div>
+            
+            <!-- Modal -->
+            <div #modal class="modal fade" id="createFolder" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <form action="" (submit)="addNewFolder()">
+                    <div class="modal-body">
+                      <div class="container-fluid">
+                        <div class="form-group row">
+                          <input class="form-control col-10" type="text" placeholder="Nouveau dossier" name="newFolder">
+                          <button class="btn btn-primary text-lg-center text-white" data-bs-dismiss="modal">+</button>
+                        </div>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+            
+            <script>
+              $('#exampleModal').on('show.bs.modal', event => {
+                var button = $(event.relatedTarget);
+                var modal = $(this);
+                // Use above variables to manipulate the DOM
+                
+              });
+            </script>
+
             <div class="card-body">
               <div class="row">
                 <div *ngFor="let dossier of dossiers" class="col-12 col-lg-4">
-                  <div class="card shadow-none border radius-15">
+                  <div class="card shadow-none border radius-15 p--2 mb-4 ml-0 mr-0">
                     <div class="card-body">
                       <small class="display-5">{{
                         dossier.type
                       }}</small>
                       <div
-                        class="d-flex flex-row align-items-center justify-content-end"
+                        class="d-flex flex-row align-items-center justify-content-end p--2 ml-0 mr-0"
                       >
                         <div class="font-60 text-primary">
                           <img
