--- a/src/app/pages/documents/document-list/document-list.component.html
+++ b/src/app/pages/documents/document-list/document-list.component.html
@@ -1,32 +1,41 @@
+<div (click)="changeDisplay()" class="mb-3">
+  <i class="fas fa-arrow-alt-circle-left fa-lg fa-fw text-primary"></i>
+</div>
+
 <div
-  class="d-flex wrap"
+  class="row"
   id="filePlusViewer"
-  *ngIf="displayInnerFolder === true"
   style="height: 90vh"
 >
-  <div class="file-container w-50">
-    <div class="file" *ngFor="let typeDoc of typeDocArray" style="width: 50px">
-      <img
-        (click)="viewFile()"
-        width="50"
-        height="50"
-        src="https://img.icons8.com/color/96/pdf-2--v1.png"
-        alt="pdf-2--v1"
-      />
-      <br />
-      <span class="fileName" style="font-size: smaller">
-        {{ typeDoc.name }}
-      </span>
-      <!-- <span class="fileSize" style="font-size: smaller;"> {{ dossier.size }} </span> -->
+  <div class="file-container col-5">
+    <div class="row">
+      <div class="file col-4" *ngFor="let typeDoc of typeDocArray" >
+        <img
+          (click)="viewFile(typeDoc.docPath)"
+          width="50"
+          height="50"
+          src="https://img.icons8.com/color/96/pdf-2--v1.png"
+          alt="pdf-2--v1"
+        />
+        <br />
+        <span class="fileName" style="font-size: smaller">
+          {{ typeDoc.name }}
+        </span>
+        <!-- <span class="fileSize" style="font-size: smaller;"> {{ dossier.size }} </span> -->
+      </div>
     </div>
   </div>
 
-  <div class="visionneuse">
-    visionneuse
-    <ngx-doc-viewer
+  <div class="visionneuse col-7 rounded shadow-lg card p--2 m-0">
+    <div class="card-header">
+      <div class="card-title">visionneuse</div>
+    </div>
+     <div class="card body">
+      <ngx-doc-viewer
       [url]="docPath"
       viewer="pdf"
-      style="width: 100%; height: 90vh"
+      style="width: 100%; min-height: 90vh"
     ></ngx-doc-viewer>
+     </div>
   </div>
 </div>
