--- a/src/app/pages/workflows/modal-associate-user/modal-associate-user.component.html
+++ b/src/app/pages/workflows/modal-associate-user/modal-associate-user.component.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
   <h4 class="modal-title">Recherche</h4>
-  <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('dismissed')">
+  <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('dismissed')">
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
@@ -31,8 +31,8 @@
   </div>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-primary" (click)="save()">Enregistrer</button>
-  <button type="button" class="btn btn-secondary" (click)="close()">Annuler</button>
+  <button type="button" class="btn btn-primary" (click)="activeModal.dismiss()">Enregistrer</button>
+  <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close click')">Anuler</button>
 </div>
 
 
