--- a/src/app/pages/documents/document-list/document-list.component.html
+++ b/src/app/pages/documents/document-list/document-list.component.html
@@ -1,7 +1,9 @@
+<!-- boutton de retour -->
 <div (click)="changeDisplay()" class="mb-3">
-  <i class="fas fa-arrow-alt-circle-left fa-lg fa-fw text-primary"></i>
+  <i class="fas fa-arrow-alt-circle-left fa-fw text-primary fa-xl "></i>
 </div>
 
+<!-- LISTE DES FICHIERS -->
 <div
   class="row"
   id="filePlusViewer"
@@ -26,6 +28,8 @@
     </div>
   </div>
 
+
+<!-- VISIONNEUSE -->
   <div class="visionneuse col-7 rounded shadow-lg card p--2 m-0">
     <div class="card-header">
       <div class="card-title">visionneuse</div>
@@ -39,3 +43,5 @@
      </div>
   </div>
 </div>
+
+
