--- a/src/app/pages/workflows/modal-add-document/modal-add-document.component.html
+++ b/src/app/pages/workflows/modal-add-document/modal-add-document.component.html
@@ -1,1 +1,58 @@
-<p>modal-add-document works!</p>
+<div class="modal-content">
+  <div class="modal-header">
+    <h5 class="modal-title">Ajouter un ou plusieurs documents</h5>
+    <button type="button" class="close" (click)="activeModal.dismiss()" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <form >
+        <div class="form-row">
+          <div class="form-group mr-2 col-lg-6">
+            <input
+              type="search"
+              id="search"
+              class="form-control"
+              aria-label="Search"
+            />
+          </div>
+          <div class="form-group col-lg-3">
+            <button class="btn btn-outline-success" (click)="searchFile()">
+              Recherche
+            </button>
+          </div>
+        </div>
+      </form>
+      <div class="row" style="height: auto;">
+        <div class="col-md-6">
+          <h5>Liste des documents</h5>
+          <div class="card border-dark" >
+            <ul class="list-group">
+              <li class="list-group-item" *ngFor="let item of searchFileResults">
+                {{ item.name }}
+              </li>
+            </ul>
+          </div>
+        </div>
+    
+        <div class="col-md-6">
+          <h5>Sélection</h5>
+          <div class="card border-dark">
+            <ul class="list-group">
+              <li class="list-group-item" *ngFor="let item of selectedFiles">
+                {{ item.name }}
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="activeModal.close('Close click')">Enregistrer</button>
+    <button type="button" class="btn btn-secondary" (click)="activeModal.dismiss()">
+        Annuler
+      </button>
+  </div>
+
+</div>
