--- a/src/app/pages/workflows/modal-associate-user/modal-associate-user.component.html
+++ b/src/app/pages/workflows/modal-associate-user/modal-associate-user.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h4 class="modal-title">Recherche</h4>
+  <h5 class="modal-title">Recherche</h5>
   <button
     type="button"
     class="close"
@@ -12,40 +12,42 @@
 <div class="modal-body">
   <form [formGroup]="searchForm">
     <div class="form-row">
-      <div class="form-group">
+      <div class="form-group mr-2 col-lg-6">
         <input
-          type="text"
+          type="search"
           id="search"
           class="form-control"
-          formControlName="search"
+          aria-label="Search"
         />
       </div>
-      <div class="form-group">
-        <button
-          class="btn btn-outline-primary form-control"
-          (click)="findUser()"
-        >
-          <i class="fa fa-search" aria-hidden="true"></i>
+      <div class="form-group col-lg-3">
+        <button class="btn btn-outline-success" (click)="search()">
+          Recherche
         </button>
       </div>
     </div>
   </form>
-  <div class="form-row">
-    <div class="col-md-6 card rounded">
+  <div class="row" style="height: auto;">
+    <div class="col-md-6">
       <h5>Résultat de la recherche</h5>
-      <ul class="list-group">
-        <li class="list-group-item" *ngFor="let item of searchResults">
-          {{ item }}
-        </li>
-      </ul>
+      <div class="card border-dark" >
+        <ul class="list-group">
+          <li class="list-group-item" *ngFor="let item of searchResults">
+            {{ item }}
+          </li>
+        </ul>
+      </div>
     </div>
-    <div class="col-md-6 card rounded">
+
+    <div class="col-md-6">
       <h5>Sélection</h5>
-      <ul class="list-group">
-        <li class="list-group-item" *ngFor="let item of selectedItems">
-          {{ item }}
-        </li>
-      </ul>
+      <div class="card border-dark">
+        <ul class="list-group">
+          <li class="list-group-item" *ngFor="let item of selectedItems">
+            {{ item }}
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </div>
@@ -55,7 +57,7 @@
   </button>
   <button
     type="button"
-    class="btn btn-outline-dark"
+    class="btn btn-secondary"
     (click)="activeModal.close('Close click')"
   >
     Anuler
